--- a/news.html
+++ b/news.html
@@ -4,7 +4,8 @@
 <title>News Page</title>
 <style>
 body {
-    background: #ffffff no-repeat;
+    background: no-repeat;
+    background-color: transparent;
     color: #000000;
     font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
     margin: 0;
