--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
 body {
     background: no-repeat;
     background-color: transparent;
-    color: #000000;
+    color: white;
     font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 20px;
